k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testcraft
  labels:
    app.kubernetes.io/name: testcraft
